--- a/APIsekkeiv130.yml
+++ b/APIsekkeiv130.yml
@@ -1,10 +1,10 @@
 openapi: "3.0.0"
 info:
   title: OHiru zukan API overview
-  version: 1.3.0
+  version: 1.3.1
   description: 変更点
-    ・API18を追加
-    ・API12の仕様変更
+    ・API12のresponse
+        restaurants -> restaurantID
 
 servers:
   - url: "http://localhost:8080"
@@ -1192,7 +1192,7 @@ components:
     GoogleRestaurants:
       type: object
       properties:
-        restaurants:
+        restaurantID:
           type: string
         name:
           type: string
