--- a/APIsekkeiv130.yml
+++ b/APIsekkeiv130.yml
@@ -1,11 +1,10 @@
 openapi: "3.0.0"
 info:
   title: OHiru zukan API overview
-  version: 1.3.2
+  version: 1.3.3
   description: 変更点
-    ・API8のazureB2CID
-        azureB2C-id -> azureB2CID
-    ・GoogleRestaurantsにimageUrlを追加
+    ・API13とAPI8
+      price,waitsを文字列に変更
 
 servers:
   - url: "http://localhost:8080"
@@ -625,7 +624,7 @@ paths:
                 items:
                   type: object
                   required:
-                  - restaurant-id
+                  - restaurantID
                   - address
                   properties:
                     restaurant-id:
@@ -974,24 +973,22 @@ components:
           maxItems: 3
           items: {type: string}
         waits:
-          type: integer
-          format: int64
+          type: string
           enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
+            - "すぐ"
+            - "5分未満"
+            - "5~10分"
+            - "10~15分"
+            - "15分以上"
         priceRange:
-          type: integer
-          format: int64
+          type: string
           enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
-            - 6
+            - "~500円"
+            - "501~1000円"
+            - "1001~1500円"
+            - "1501~2000円"
+            - "2001~3000円"
+            - "3001~円"
         paymentsDetails:
           type: array
           items: {type: string}
@@ -1034,24 +1031,22 @@ components:
             - 4
             - 5
         waits:
-          type: integer
-          format: int64
+          type: string
           enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
+            - "すぐ"
+            - "5分未満"
+            - "5~10分"
+            - "10~15分"
+            - "15分以上"
         priceRange:
-          type: integer
-          format: int64
+          type: string
           enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
-            - 6
+            - "~500円"
+            - "501~1000円"
+            - "1001~1500円"
+            - "1501~2000円"
+            - "2001~3000円"
+            - "3001~円"
         paymentsDetails:
           type: array
           items: {type: string}
