--- a/APIsekkeiv130.yml
+++ b/APIsekkeiv130.yml
@@ -1,8 +1,9 @@
 openapi: "3.0.0"
 info:
   title: OHiru zukan API overview
-  version: 1.3.4
+  version: 1.4.0
   description: 変更点
+    ・API19手動更新くん作成
     ・APIのステータスコードに対応する表示メッセージを追加
 
 servers:
@@ -226,6 +227,45 @@ paths:
         "409":
           description: Conflict
             既にそのレストランは登録済みです。
+        "500":
+          description: Internal Server Error
+            サーバー側でエラーが発生しました。
+        "503":
+          description: Service Unavailable
+            一日の合計リクエスト上限に達しました。
+    patch:
+      tags:
+        - restaurants
+      summary: API19 手動更新くん
+      description: googleからの店舗情報再取得を依頼するAPI
+      operationId: patchRestaurant
+      parameters:
+        - name: restaurant-id
+          in: path
+          description: レストラン指定のためのID
+          required: true
+          schema:
+            type: string
+        - name: azureB2C-id
+          in: path
+          description: ユーザー指定のためのID
+          required: true
+          schema:
+            type: string
+
+      responses:
+        "200":
+          description: OK 店舗詳細ページのURLを返す
+          content:
+            application/json:
+              schema:
+                type: string
+        "404":
+          description: Not Found
+            ユーザーもしくはレストランは見つかりませんでした。
+        "409":
+          description: Conflict
+            本日既にそのレストランは更新済みです。
         "500":
           description: Internal Server Error
             サーバー側でエラーが発生しました。
