--- a/APIsekkeiv130.yml
+++ b/APIsekkeiv130.yml
@@ -1150,7 +1150,7 @@ components:
     OpenTime:
       type: object
       properties:
-        isOpentimeKnown:
+        isOpenTimeKnown:
           type: boolean
         openMon:
           type: boolean
